# rust_trader

./: .env  Cargo.toml  README.md
.github/workflows/: test.yml
src/: main.rs
src/descriptor/: domain_entity.rs  domain_logic.rs  mod.rs  system_entity.rs  system_logic.rs
src/market_listener/: connect.rs  stream.rs
